--- a/assets/css/style.v2.0.css
+++ b/assets/css/style.v2.0.css
@@ -1185,4 +1185,9 @@ button.collapse_btn:hover {
 .mutleSelect .select2-container {
   width: 100% !important;
 }
+
+.form-control:disabled, .form-control[readonly] {
+  background-color: transparent;
+  opacity: 1;
+}
 /*# sourceMappingURL=style.v2.0.css.map */
