--- a/assets/css/style.v2.0.scss
+++ b/assets/css/style.v2.0.scss
@@ -180,6 +180,9 @@ ul {
 
 .banner {
     padding: 70px 0 12px 0;
+    .common_card{
+        margin-bottom: 0px;
+    }
 }
 
 .banner select {
@@ -1072,11 +1075,13 @@ button.collapse_btn {
     }
 }
 
-.rating_stars {
+.rating {
+    box-shadow: unset !important;
+    padding: 0px !important;
     .fa-star {
         color: rgba(23, 34, 57, 0.05);
         cursor: pointer;
-
+        font-size: 1.2em !important;
         &:hover,
         &.clicked_star {
             color: #FFA800;
