--- a/assets/css/style.v2.0.scss
+++ b/assets/css/style.v2.0.scss
@@ -76,7 +76,7 @@ ul {
 .navbar-sticky-top {
     position: fixed;
     width: 100%;
-    z-index: 99;
+    z-index: 99999;
     height: 50px;
     display: flex;
     align-items: center;
@@ -241,6 +241,46 @@ opacity: 0.5;
         width: 300px; background: #FFFFFF; box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15); border-radius: 12px;
     }
 }
+
+// mood modal starts from here
+.btn__close{
+    position: absolute;
+    right: 15px;
+    top: 9px;
+}
+.mood_box{
+    position: relative;
+    text-align: center;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+    &:last-of-type{
+        border-bottom: 0px;
+        padding-bottom: 0px;
+    }
+    h5{
+        font-weight: 400;
+font-size: 12px;
+line-height: 15px;
+color: #172239;
+margin-bottom: 15px;
+    }
+    p{
+        font-weight: 400;
+font-size: 12px;
+line-height: 10px;
+text-align: center;
+letter-spacing: -0.02em;
+color: rgba(23, 34, 57, 0.5);
+margin-bottom: 10px;
+
+}
+}
+
+
+// mood modal ends here
+
+
 
 // analyze modal ends here
 
@@ -1353,11 +1393,21 @@ button.collapse_btn.collapsed .fa-chevron-down {
 .bs-popover-end>.popover-arrow::after {
     display: none;
 }
+.bs-popover-auto[data-popper-placement^=left]>.popover-arrow::before,
+.bs-popover-end>.popover-arrow::before {
+    display: none;
+}
+
+.bs-popover-auto[data-popper-placement^=left]>.popover-arrow::after,
+.bs-popover-end>.popover-arrow::after {
+    display: none;
+}
 
 .popover {
     border: unset;
     max-width: 300px;
-    left: 40px !important;
+    // left: 40px !important;
+    z-index: 9999999999;
 }
 
 .popover-body {
@@ -1375,4 +1425,18 @@ button.collapse_btn.collapsed .fa-chevron-down {
 
 .popover-header {
     display: none;
+}
+.btn{
+    &:hover{
+        border: unset;
+    }    
+}
+
+
+
+
+.modalInfo_icon{
+    position: absolute;
+    right: 0px;
+    top: 0px;
 }
