--- a/assets/css/style.v2.0.scss
+++ b/assets/css/style.v2.0.scss
@@ -1440,3 +1440,225 @@ button.collapse_btn.collapsed .fa-chevron-down {
     right: 0px;
     top: 0px;
 }
+
+/* More Page CSS starts here */ 
+
+.btn_save {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    background: #A858E1;
+    border: 3px solid #A858E1 ;
+    border-radius: 3px;
+    color: #fff;
+    width: 123px;
+    height: 38px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    text-align: center;
+    color: #FFFFFF;
+    margin: 0 auto;
+}
+
+.btn-settings{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    width: 123px;
+    height: 38px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    text-align: center;
+    float: right;
+}
+
+.btn-enabled{
+    background-color: #0AD3121A;
+    color: #0AD312;
+    border-radius: 10px;
+    border: 1px solid #0AD3121A !important;
+}
+
+.btn-delete{
+    background-color: #D30A0A;
+    color: white;
+    border-radius: 3px;
+    border: 3px solid #D30A0A !important;
+}
+.knobs, .layer
+{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.switch-button
+{
+    position: relative;
+    width: 43px;
+    overflow: hidden;
+}
+
+.switch-button.r, .switch-button.r .layer
+{
+    border-radius: 100px;
+}
+
+
+.checkbox
+{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 3;
+}
+
+.knobs
+{
+    z-index: 2;
+}
+
+.layer
+{
+    width: 100%;
+    background-color: gray;
+    transition: 0.3s ease all;
+    z-index: 1;
+}
+
+/* Button 1 */
+#button-1 .knobs:before
+{
+    content: '';
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    width: 20px;
+    height: 10px;
+    color: #fff;
+    font-size: 10px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1;
+    padding: 9px 0px;
+    background-color: white;
+    border-radius: 50%;
+    transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
+}
+
+#button-1 .checkbox:checked + .knobs:before
+{
+    content: '';
+    left: 20px;
+    background-color: white;
+    ;
+}
+
+#button-1 .checkbox:checked ~ .layer
+{
+    background-color: #0092FF;
+}
+
+#button-1 .knobs, #button-1 .knobs:before, #button-1 .layer
+{
+    transition: 0.3s ease all;
+}
+
+.accordion-item__faq{
+    border: none !important;
+    & + .accordion-item__faq{
+        border-top: 1px solid #EFEFEF !important;
+        border-radius: 0px !important;    
+    }
+    .accordion-header{
+        font-size: 12px !important;
+        position: relative;    
+        padding: 10px 10px 10px 10px;
+        font-weight: 500;
+    }
+    
+    
+}
+
+
+.faq-answer{
+    font-style: inherit !important;
+    color: #172239 !important;
+    font-size: 10px;
+    padding: 15px 0px 0px 0px;
+}
+
+.faq-accordion-body{
+    border: 1px solid #EFEFEF !important;
+    padding-top: 8px !important
+}
+
+.faq-accordion-body{
+    padding-top: 0px !important;
+}
+
+.input-disabled{
+    background-color: #e1e1e2 !important;
+
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.icon-shape {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    vertical-align: middle;
+    z-index: 1;
+}
+
+.icon-sm {
+    width: 2rem;
+    height: 2rem; 
+}
+
+.main-page-header{
+    gap: 10px;
+    justify-content: flex-start !important
+}
+.main-page-header span{
+    font-size: 14px !important;
+    font-weight: 500;
+}
+
+.input-fields{
+    margin-bottom: 15px
+}
+
+.input-text{
+    padding: 12px 14px 12px 14px;
+}
+
+.input-bottom{
+    padding: 0.1em 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1019607843);
+    margin: 15px 0px;
+}
+
+.quantity-field{
+    border: 3px solid #f0f0f0;
+}
+
+input:focus-visible{
+    outline: 0px !important;
+}
