--- a/assets/css/style.v2.0.css
+++ b/assets/css/style.v2.0.css
@@ -1430,10 +1430,10 @@ button.collapse_btn.collapsed .fa-chevron-down {
 }
 
 .btn-delete {
-  background-color: #D30A0A;
-  color: white;
+  background-color: transparent;
+  color: #D30A0A;
   border-radius: 3px;
-  border: 3px solid #D30A0A !important;
+  border: 1px solid #D30A0A !important;
 }
 
 .knobs, .layer {
@@ -1536,10 +1536,8 @@ button.collapse_btn.collapsed .fa-chevron-down {
 .faq-accordion-body {
   border: 1px solid #EFEFEF !important;
   padding-top: 8px !important;
-}
-
-.faq-accordion-body {
   padding-top: 0px !important;
+  border-radius: 3px;
 }
 
 .input-disabled {
