--- a/assets/css/style.v2.0.scss
+++ b/assets/css/style.v2.0.scss
@@ -1689,3 +1689,11 @@ margin-bottom: 0px;
 a.accordion-header{
     color: #172239;
 }
+
+.common-body__more{
+    .accordion-item{
+        .accordion-button{
+            padding-right: 9.5px !important;
+        }
+    }
+}
