final changes done

--- a/assets/css/style.v2.0.scss
+++ b/assets/css/style.v2.0.scss
@@ -1513,7 +1513,6 @@ button.collapse_btn.collapsed .fa-chevron-down {
     border-radius: 50px;
 }
 
-
 .checkbox
 {
     position: relative;
@@ -1654,6 +1653,7 @@ input::-webkit-inner-spin-button {
 .quantity-field{
     border: 3px solid #f0f0f0;
     width: 36px;
+    font-size: 14px;
 }
 
 input:focus-visible{
