--- a/assets/css/style.v2.0.css
+++ b/assets/css/style.v2.0.css
@@ -1586,6 +1586,7 @@ input::-webkit-inner-spin-button {
 .quantity-field {
   border: 3px solid #f0f0f0;
   width: 36px;
+  font-size: 14px;
 }
 
 input:focus-visible {
